# NekoLand

./: .gitignore  Cargo.toml  README.md  README_DE.md  README_FR.md  STATUS.md  STATUS_DE.md  STATUS_FR.md  install.sh
.config/neko-desktop/: config.json
.github/workflows/: release.yml
assets/pets/: ace.json  air.json  alien.json  bluemarine.json  bug.json  chocobo.json  doom.json  lucy.json  neko.json  robot.json
src/: config.rs  dock.rs  i18n.rs  main.rs  mapper.rs  mouse.rs  pet.rs  toy.rs  tray.rs  tray_sys.rs  twitch.rs  util.rs
stubs/: gdk_win32_stub.c
tools/: sprite_mapper.html
