[package]
name = "nekoland"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
gdk4-win32 = "0.9"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
gdk4-macos = "0.9"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4-layer-shell = "0.4"
# Tray icon (StatusNotifierItem) — thread dbus autonome, pas besoin de tokio
ksni = "0.2"

[target.'cfg(any(target_os="windows", target_os="macos"))'.dependencies]
tray-icon = "0.14.3"

[dependencies]
# GTK4 + layer-shell : l'overlay Wayland always-on-top, click-through
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }

# Twitch Heat : WebSocket asynchrone
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"

